# ogun

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: BENCHMARKS.md  SCOPE.md  idea.md  parallels.md  pcb_generation.md  v0.2.0-plan.md
docs/paper/: ogun_paper.aux  ogun_paper.out  ogun_paper.tex
docs/research/: OGUN_ALGORITHM_RESEARCH.md  research_notes.md
src/: generate.rs  graph.rs  grid.rs  layout.rs  lib.rs  placement.rs  potential.rs  routing.rs  scoring.rs  types.rs
tests/: generate_fixtures.rs  perf.rs  regression.rs  smoke.rs
tests/fixtures/: high_beta.json  linear_chain.json  low_beta.json  small_cluster.json  trivial.json  with_obstacles.json
