[package]
name = "ogun"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
authors = ["Elias Vahlberg"]
description = "Spatial layout generation via sequential logit dynamics on potential games"
license = "MIT"
readme = "README.md"
repository = "https://github.com/EliasVahlberg/ogun"
keywords = ["procgen", "layout", "game-theory", "potential-game", "spatial"]
categories = ["algorithms", "game-development", "simulation"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.11.0"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
